k8s/nginx-replicaset-service-horizontalpodautoscaler.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
     app: nginx
spec:
  ports:
  - port: 80
  selector:
    app: nginx
  type: NodePort
