k8s/reactjs-namespace-deployment-service.yml
kind: Namespace
apiVersion: v1
metadata:
  name: development
  labels:
    name: development
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: reactjs-deployment
  namespace: development
spec:
  replicas: 2
  selector:
    matchLabels:
      app: reactjs
  template:
    metadata:
      labels:
        app: reactjs
        tier: frontend
        environment: development
    spec:
      containers:
        - name: reactjs
          image: anhdiepmmk/frontend-react-app:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      restartPolicy: Always
---
kind: Service
apiVersion: v1
metadata:
  name: reactjs-service
  namespace: development
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      nodePort: 31000
  selector:
    app: reactjs
    tier: frontend
    environment: development
